syntax = "proto3";

package hermes;

message Message {
  string recipient = 1;
  string body = 2;
}

// WARN: do we want to have an ack back after sending a message?
message Ack {
}

message FetchReq{
  string user = 1;
  int32  number = 2;
}

message MessageList {
  repeated Message inner = 1;
}
service MessageService {
  rpc Send(Message) returns (Ack);
  rpc Fetch(FetchReq) returns (MessageList);
}

